--- a/site/index.html
+++ b/site/index.html
@@ -171,8 +171,8 @@
                 <div class="col-md-4 text-center">
                     <img src="team_member_2_photo.jpg" alt="Team Member 2 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
-                    <h3>Team Member 2</h3>
-                    <p>Role and contribution</p>
+                    <h3>Maxwell Thorpe</h3>
+                    <p>Acted as product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint reviews with Scrum master.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="team_member_3_photo.jpg" alt="Team Member 3 Photo" class="img-fluid rounded-circle"
