--- a/site/index.html
+++ b/site/index.html
@@ -169,7 +169,7 @@
                     <p>Assisted in the front-end; specifically using React to construct the alert page</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="team_member_2_photo.jpg" alt="Team Member 2 Photo" class="img-fluid rounded-circle"
+                    <img src="img/mrthorpe.jpg" alt="Team Member 2 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Maxwell Thorpe</h3>
                     <p>Acted as product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint reviews with Scrum master.</p>
