Edit video link.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <h2>Video</h2>
             <p>Short introduction or description for the video.</p>
             <!-- Replace the src attribute with your actual video URL -->
-            <iframe width="560" height="315" src="https://youtu.be/zzSH5IBXXaQ" frameborder="0"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zzSH5IBXXaQ" frameborder="0"
                 allowfullscreen></iframe>
         </div>
     </section>
