--- a/site/index.html
+++ b/site/index.html
@@ -169,16 +169,16 @@
                     <p>Assisted in the front-end; specifically using React to construct the alert page</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="img/mrthorpe.jpg" alt="Team Member 2 Photo" class="img-fluid rounded-circle"
+                    <img src="img/mrthorpe.jpg" alt="Maxwell Thorpe Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Maxwell Thorpe</h3>
-                    <p>Acted as product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint reviews with Scrum master.</p>
+                    <p>Product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint reviews with Scrum master.</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="team_member_3_photo.jpg" alt="Team Member 3 Photo" class="img-fluid rounded-circle"
+                    <img src="img/chris-lebioda-plane.jpg" alt="Chris Lebioda Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
-                    <h3>Team Member 3</h3>
-                    <p>Role and contribution</p>
+                    <h3>Chris Lebioda</h3>
+                    <p>Scrum master, part-time Product Owner, QA, Heroku Learner. Focused on designing and sending emails to users and fixing bugs.</p>
                 </div>
             </div>
             <div class="row">
@@ -210,7 +210,9 @@
             Contact information for inquiries:
             <a href="mailto:lionelr@umich.edu">lionelr@umich.edu</a>
         </p>
-        <p>Links to team members' individual online portfolios</p>
+        <p>Team Members' Portfolios</p>
+        <a href="https://mrthorpe12.github.io/personal_portfolio/">Maxwell Thorpe</a>
+        <a href="https://clebioda.github.io/">Chris Lebioda</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
