Add Julie Zhang img and role

--- a/index.html
+++ b/index.html
@@ -189,10 +189,11 @@
                     <p>Role and contribution</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="team_member_5_photo.jpg" alt="Team Member 5 Photo" class="img-fluid rounded-circle"
+                    <img src="img/julie-zhang.jpeg" alt="Team Member 5 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
-                    <h3>Team Member 5</h3>
-                    <p>Role and contribution</p>
+                    <h3>Jiashu (Julie) Zhang</h3>
+                    <p>Developer. Focused on user experience improvements on the search page, including restructions on the searching area and the launching of the detail page for each individual result. 
+                        In addition, assisted in prototyping Notification page for alert and profile management.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="team_member_6_photo.jpg" alt="Team Member 6 Photo" class="img-fluid rounded-circle"
