--- a/index.html
+++ b/index.html
@@ -196,10 +196,10 @@
                         In addition, assisted in prototyping Notification page for alert and profile management.</p>
                 </div>
                 <div class="col-md-4 text-center">
-                    <img src="team_member_6_photo.jpg" alt="Team Member 6 Photo" class="img-fluid rounded-circle"
+                    <img src="img/cheryl-wu.png" alt="Team Member 6 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
-                    <h3>Team Member 6</h3>
-                    <p>Role and contribution</p>
+                    <h3>Xiaoyan(Cheryl) Wu</h3>
+                    <p>UX designer, Frontend developer. Focused on designing the UX workflow, building profile and alert management page and adding alerts feature on the frontend, implementing the overall UI style.</p>
                 </div>
             </div>
         </div>
