--- a/site/index.html
+++ b/site/index.html
@@ -163,10 +163,10 @@
             <div class="row">
                 <!-- Replace with actual team member details -->
                 <div class="col-md-4 text-center">
-                    <img src="team_member_1_photo.jpg" alt="Team Member 1 Photo" class="img-fluid rounded-circle"
+                    <img src="img/me.jpeg" alt="Team Member 1 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Lionel Robert</h3>
-                    <p>Assisted in the front-end; specifically using React to construct the alert page</p>
+                    <p>UX designer, Frontend developer. Focused on developing front-end logic, building alert management page and adding alerts using React.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="img/mrthorpe.jpg" alt="Maxwell Thorpe Photo" class="img-fluid rounded-circle"
