added framework for project history

--- a/index.html
+++ b/index.html
@@ -134,14 +134,64 @@
     </section>
 
     <!-- Project History -->
-    <section class="container my-5">
+    <section class="my-5">
         <div class="container content-wrapper">
             <h2>Project History</h2>
-            <p>
-                Timeline of the project from the prototype to the final implementation.
-            </p>
-            <!-- Replace with actual images or screenshots -->
-            <img src="project_image.png" alt="Project Image" class="img-fluid" />
+
+            <!-- Jira -->
+            <div class="my-4">
+                <h3>Jira for Product Backlog Management</h3>
+                <p>
+                    Our team utilized Jira to manage and organize our product backlog effectively. This allowed us to
+                    prioritize tasks, assign work to team members, and track progress throughout the project. By using
+                    Jira, we were able to maintain a clear and organized workflow, ensuring that our project stayed on
+                    track and met all milestones.
+                </p>
+            </div>
+
+            <!-- User Research -->
+            <div class="my-4">
+                <h3>User Research and Interviews</h3>
+                <p>
+                    We conducted user research by organizing interviews with potential users. These interviews provided
+                    valuable insights into user needs, preferences, and pain points. This user-centric approach allowed
+                    us to identify key features and functionalities that would enhance the user experience and address
+                    the challenges faced by our target audience.
+                </p>
+            </div>
+
+            <!-- High-Fidelity Wireframes -->
+            <div class="my-4">
+                <h3>High-Fidelity Wireframe Prototypes</h3>
+                <p>
+                    Our team designed high-fidelity wireframe prototypes for our application. These prototypes enabled
+                    us to visualize the user interface and user experience, ensuring that our app met the needs of our
+                    target audience. By iterating on these prototypes, we were able to refine our design and establish a
+                    solid foundation for the final implementation.
+                </p>
+            </div>
+
+            <!-- Django RESTful API -->
+            <div class="my-4">
+                <h3>Constructing the RESTful API with Django</h3>
+                <p>
+                    We built a robust and scalable RESTful API using Django to power the back-end of our application.
+                    This API enabled seamless communication between the front-end and our data sources, ensuring
+                    efficient data retrieval and storage. By using Django, we ensured that our API was reliable, secure,
+                    and easily maintainable.
+                </p>
+            </div>
+
+            <!-- React Front-End Implementation -->
+            <div class="my-4">
+                <h3>Final Front-End Implementation with React</h3>
+                <p>
+                    Our team implemented the front-end of our application using React, a popular and powerful JavaScript
+                    framework. This allowed us to create a responsive and dynamic user interface that provided an
+                    engaging and seamless user experience. By leveraging React's component-based architecture, we were
+                    able to build a maintainable and scalable application that met the needs of our users.
+                </p>
+            </div>
         </div>
     </section>
 
