Add content for key features.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,18 @@
                 <!-- Replace with actual features and icons -->
                 <div class="col-md-4">
                     <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
-                    <h3>Feature Title</h3>
-                    <p>Feature Description</p>
+                    <h3>Email Alerts</h3>
+                    <p>Users will receive email alerts whenever a story containing one or more user-specified keywords is uploaded. Each alert will contain an embedded video or a video link, as well as a summary of the story contents.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
+                    <h3>Alert Dashboard</h3>
+                    <p>Users can access a personalized dashboard where they can create, update, and delete their personalized alerts.</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
+                    <h3>Additional search features</h3>
+                    <p>Users can select multiple state and locality values. Users can also specify as many search terms as they would like. Alerts can be created independently of running searches.</p>
                 </div>
             </div>
         </div>
