--- a/site/index.html
+++ b/site/index.html
@@ -57,19 +57,23 @@
             <div class="row">
                 <!-- Replace with actual features and icons -->
                 <div class="col-md-4">
-                    <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
+                    <img src="img/email.png" alt="Feature Icon" class="img-fluid tech-logo" />
                     <h3>Email Alerts</h3>
-                    <p>Users will receive email alerts whenever a story containing one or more user-specified keywords is uploaded. Each alert will contain an embedded video or a video link, as well as a summary of the story contents.</p>
+                    <p>Users will receive email alerts whenever a story containing one or more user-specified keywords
+                        is uploaded. Each alert will contain an embedded video or a video link, as well as a summary of
+                        the story contents.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
+                    <img src="img/dashboard.png" alt="Feature Icon" class="img-fluid tech-logo" />
                     <h3>Alert Dashboard</h3>
-                    <p>Users can access a personalized dashboard where they can create, update, and delete their personalized alerts.</p>
+                    <p>Users can access a personalized dashboard where they can create, update, and delete their
+                        personalized alerts.</p>
                 </div>
                 <div class="col-md-4">
-                    <img src="feature_icon.png" alt="Feature Icon" class="img-fluid" />
+                    <img src="img/loupe.png" alt="Feature Icon" class="img-fluid tech-logo" />
                     <h3>Additional search features</h3>
-                    <p>Users can select multiple state and locality values. Users can also specify as many search terms as they would like. Alerts can be created independently of running searches.</p>
+                    <p>Users can select multiple state and locality values. Users can also specify as many search terms
+                        as they would like. Alerts can be created independently of running searches.</p>
                 </div>
             </div>
         </div>
@@ -226,19 +230,22 @@
                     <img src="img/me.jpeg" alt="Team Member 1 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Lionel Robert</h3>
-                    <p>UX designer, Frontend developer. Focused on developing front-end logic, building alert management page and adding alerts using React.</p>
+                    <p>UX designer, Frontend developer. Focused on developing front-end logic, building alert management
+                        page and adding alerts using React.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="img/mrthorpe.jpg" alt="Maxwell Thorpe Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Maxwell Thorpe</h3>
-                    <p>Product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint reviews with Scrum master.</p>
+                    <p>Product owner. Assisted with backend tasks (Django) and database configuration. Co-led sprint
+                        reviews with Scrum master.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="img/chris-lebioda-plane.jpg" alt="Chris Lebioda Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Chris Lebioda</h3>
-                    <p>Scrum master, part-time Product Owner, QA, Heroku Learner. Focused on designing and sending emails to users and fixing bugs.</p>
+                    <p>Scrum master, part-time Product Owner, QA, Heroku Learner. Focused on designing and sending
+                        emails to users and fixing bugs.</p>
                 </div>
             </div>
             <div class="row">
@@ -246,20 +253,24 @@
                     <img src="img/avater.jpg" alt="Team Member 4 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Xinyue Chen</h3>
-                    <p>Developer: Responsible for the database configuration, and Django backend developemnt. Assisted with the story about the profile page in the front end. </p>
+                    <p>Developer: Responsible for the database configuration, and Django backend developemnt. Assisted
+                        with the story about the profile page in the front end. </p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="img/julie-zhang.jpeg" alt="Team Member 5 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Jiashu (Julie) Zhang</h3>
-                    <p>Developer. Focused on user experience improvements on the search page, including restructions on the searching area and the launching of the detail page for each individual result. 
+                    <p>Developer. Focused on user experience improvements on the search page, including restructions on
+                        the searching area and the launching of the detail page for each individual result.
                         In addition, assisted in prototyping Notification page for alert and profile management.</p>
                 </div>
                 <div class="col-md-4 text-center">
                     <img src="img/cheryl-wu.png" alt="Team Member 6 Photo" class="img-fluid rounded-circle"
                         style="max-width: 150px;">
                     <h3>Xiaoyan(Cheryl) Wu</h3>
-                    <p>UX designer, Frontend developer. Focused on designing the UX workflow, building profile and alert management page and adding alerts feature on the frontend, implementing the overall UI style.</p>
+                    <p>UX designer, Frontend developer. Focused on designing the UX workflow, building profile and alert
+                        management page and adding alerts feature on the frontend, implementing the overall UI style.
+                    </p>
                 </div>
             </div>
         </div>
@@ -274,6 +285,13 @@
         <p>Team Members' Portfolios</p>
         <a href="https://mrthorpe12.github.io/personal_portfolio/">Maxwell Thorpe</a>
         <a href="https://clebioda.github.io/">Chris Lebioda</a>
+        <p>Icon Credits</p>
+        <a href="https://www.flaticon.com/free-icons/email" title="email icons">Email icons created by IconMark -
+            Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/dashboard" title="dashboard icons">Dashboard icons created by
+            Eucalyp - Flaticon</a>
+        <a href="https://www.flaticon.com/free-icons/search" title="search icons">Search icons created by Freepik -
+            Flaticon</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
